Minicraft+ version 2.0.3




Minicraft+ version 2.0.2

* Switched the multiplayer protocol from UDP to TCP.
* fixed problems with doors, floors, and walls (item drops, etc.)
+ made TNT light other TNT
* edited coal drop amount
* made lots of edits to mob spawn rate, and mob count management
+ Made it so all mobs (not players obviously) despawn after a certain amount of time (will later be fixed so mobs close to the player don't despawn.
+ Made enchanter craftable.
- removed enchanter and workbench from starting inventory.
- removed the power glove. It's still used, but you can only use it by pressing the "pickup" key ("v" by default); you can't get it in your inventory.
+ Added "unknown" item to make it obvious when something has gone wrong; it has the requested name, but the sprite is a pink square.
* Fixed multiplayer attack rendering across clients; now shows attack, including the item a client is attacking with.
* Fixed creative inventory for clients in multiplayer.
* Fixed multiplayer client saving.
- removed all the "frozen mobs" which kept appearing in multiplayer
* Fixed unlocked score mode times not appearing until you restarted the game; you shouldn't have to restart it now.
+ Added F3 menu for the server instance of the game in multiplayer.
* Patched possible duplicate usernames glitch


Minicraft+ version 2.0.1

+* added more super-secret debug powers... mua ha ha...
+ added to F3 window: level mobcount + max mobcount, and name of current tile
+ Arrows now appear in your inventory
* Fixed crafting; correct number of items are used
* Creepers shouldn't be able to blow up stairs anymore
* Bed spawning should now work; once you sleep in a bed, you will always spawn from the place that you were standing right before you got in bed, unless that spot later becomes rock, or something else a player can't walk through. The bed does not have to remain where it is; you can destroy it, and you will continue to spawn in the spot described above.