@@ -1,5 +1,6 @@
 Minicraft+ version 2.0.3
 
++ Added support for dedicated servers! With a CLI OS, meaning an OS without a GUI. This allows for more compatibility, not to mention more resources being able to be devoted to the game.
 
 
 
